syntax = "proto3";

package spotify.protoman;

option java_package = "com.spotify.protoman";
option go_package = "registry";
option java_multiple_files = true;

service SchemaRegistry {
    rpc PublishSchema (PublishSchemaRequest) returns (PublishSchemaResponse) {}

    rpc GetSchema (GetSchemaRequest) returns (GetSchemaResponse) {}
}

message PublishSchemaRequest {
    repeated ProtoFile proto_file = 1;
    bool dry_run = 2;
    bool force = 3;
}

message PublishSchemaResponse {
    repeated PublishedPackage published_package = 1;
    repeated ValidationViolation violation = 2;
    Error error = 3;
}

message Error {
    string message = 1;
}

message ProtoFile {
    string path = 1;
    string content = 2;
}

message ValidationViolation {
    string description = 1;
    bool fatal = 2;
    FilePosition current = 3;
    FilePosition candidate = 4;
}

message FilePosition {
    string path = 1;
    int32 line = 2;
    int32 column = 3;
}

message PublishedPackage {
    string package = 1;
    SchemaVersion prev_version = 2;
    SchemaVersion version = 3;
}

message SchemaVersion {
    string major = 1;
    int32 minor = 2;
    int32 patch = 3;
}

message GetSchemaRequest {
    repeated RequestedPackage request = 1;

    message RequestedPackage {
        string package = 1;
    }
}

message GetSchemaResponse {
    repeated ProtoFile proto_file = 1;
}
